Bugs fix: - Withdrawal balance insufficient check (Fixed) - Withdrawal heading alignment (Fixed) - Recharge code invalid check (Fixed) - Recharge code feeback message position (Fixed) - Recharge code div size (Fixed) - Recharge service .on (Fixed .once)

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -141,7 +141,7 @@ form input {
 .transactiondiv{
   background-color: rgba(0, 0, 0, 0.5);
   overflow-y: auto;
-  height: 220px;
+  height: 232px;
   padding: 25px;
   margin-bottom: 40px;
 }
